src/index.css
@import "./bootstrap.min.css";

:root {
  --color-white: #fff;
  --color-black: #000;
  --color-grey: #eee;
  --color-grey-0: rgba(255, 255, 255, 0.8);
  --color-grey-00: rgba(238, 238, 238, 0.5);
  --color-grey-1: rgba(150, 150, 150, 0.5);
  --color-grey-2: rgba(0, 0, 0, 0.2);
  --color-grey-3: rgba(0, 0, 0, 0.3);
  --color-grey-4: rgba(0, 0, 0, 0.4);
  --color-grey-5: rgba(0, 0, 0, 0.7);
  --color-green-success: rgba(75, 191, 115, 1);
}

/* From Animista */
.fade-in {
  -webkit-animation: fade-in 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
  animation: fade-in 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
}

@-webkit-keyframes fade-in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

/* From Animista */

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--color-grey);
  background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png");
}

.themeSwitch {
  display: flex;
  justify-content: center;
  align-items: center
}

.themeSwitch p {
  margin: auto 0.2rem;
  color: var(--color-grey)
}

#light {
  background-color: var(--color-grey);
  background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png");
}

#light .navbar {
  background-color: var(--color-green-success);
}

#dark {
  background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png");
  background-color: rgba(0, 0, 0, 0.7);
}

#dark label {
  color: var(--color-grey);
}

#dark select {
  color: var(--color-grey);
}

#dark .searchString {
  color: var(--color-grey);
}

#dark .search,
#dark .joke {
  background-color: var(--color-grey-4);
}

#dark h1,
#dark h2 {
  color: var(--color-white);
}

#dark .about p {
  color: #ccc;
}

#dark .about a {
  color: var(--color-white);
}

#dark hr {
  border-color: var(--color-grey-00)
}

#dark .navbar {
  background-color: var(--color-grey-5);
}

#dark footer {
  color: var(--color-grey-0);
}


main {
  min-height: 75vh;
  margin: 3% auto 1%;
  width: 100%;
  display: flex;
  text-align: center;
}

.nav-link {
  transition: all .2s ease-in-out;
}

.nav-link:hover {
  transform: scale(1.1);
}

span a {
  color: var(--color-white);
  font-size: 1.5rem;
  font-weight: 600;
}

.search {
  background-color: var(--color-grey-2);
  border-radius: 35px;
  padding: 1rem;
}

/* Menu Header */
div h1 {
  font-size: 1.8rem;
  padding: 0.7rem 0 1rem;
  color: var(--color-white);
}

div.row {
  margin: .5rem auto;
}

hr {
  width: 65%;
  border-top: 8px dotted var(--color-grey-2);
  padding: .3em;
  margin: 2rem auto;
}

.options {
  font-weight: 700;
  font-size: 1.2rem;
  margin: auto;
  color: var(--color-grey);
  column-width: 50%;
}

label {
  font-size: 1rem;
  font-weight: 400;
  cursor: pointer;
  transition: all .15s ease-in-out;
}

label:hover {
  transform: scale(1.08);
  font-weight: 600;
}

label:active {
  transform: scale(1.1);
  font-weight: 750;
}

.searchString,
select {
  text-align: center;
  color: var(--color-grey-5);
  font-weight: 500;
  background-color: transparent;
  border-radius: 10px;
  border: 2px solid var(--color-grey-00);
  box-shadow: .8px .8px .8px .8px var(--color-black);
  min-height: 2rem;
  max-width: 40%;
  display: flex;
  align-items: center;
  transition: all .2s ease-in-out;
}

.searchString:hover,
select:hover {
  transform: scale(1.1);
}

.deleteButton {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 40%;
}

.resetButton,
.searchButton,
.deleteButton {
  border-radius: 8px;
  transition: all .2s ease-in-out;
}

.resetButton:hover,
.searchButton:hover,
.deleteButton:hover {
  transform: scale(1.1);
}

.resetButton:active,
.searchButton:active,
.deleteButton:active {
  transform: scale(1.2);
}

.resetRow {
  padding-top: 2rem;
}

.url {
  margin: 0.5rem auto 0;
  padding: .5rem;
  font-size: 1rem;
  font-weight: 300;
  color: var(--color-grey-0);
  background-color: var(--color-grey-1);
  border-radius: 1rem;
  width: 60%;
  word-wrap: break-word
    /* prevents the text from overflowing the parent div */
}

.joke {
  font-size: 1.5rem;
  font-weight: 600;
  color: var(--color-white);
  background-color: var(--color-grey-2);
  border-radius: 30px;
  padding: 1rem;
  width: 85%;
  margin: 2rem auto 0;
}

.jokeCategory {
  margin-bottom: 0.5rem;
  text-decoration: underline;
}

.jokeType {
  display: flex;
  align-items: center;
}

/* About Screen */
.about {
  width: 100%;
  text-align: center;
  line-height: 1.15;
  margin-top: 2.9rem;
}

.about h1 {
  font-size: 2.5rem;
  color: var(--color-white);
}

.about h2 {
  font-size: 1.8rem;
  padding: 0.5rem;
  color: var(--color-white);
}

.about p {
  font-size: 1.2rem;
  color: var(--color-grey-4);
}

.about span {
  font-size: 1rem;
}

.about-links {
  color: var(--color-grey-4);
  font-weight: 800;
  font-size: 1rem;
}

/* heart icon */
.about span span {
  color: red;
}

/* bolded text in the about screen */
p span {
  font-weight: 800;
}

footer {
  font-size: 0.75rem;
  font-weight: 500;
  color: var(--color-grey-4);
}

/* https://moderncss.dev/pure-css-custom-checkbox-style/#custom-checkbox-style */
input[type="checkbox"] {
  -webkit-appearance: none;
  appearance: none;
  background-color: inherit;
  margin: 0.3rem;
  cursor: pointer;
  font: inherit;
  color: currentColor;
  width: 1.15em;
  height: 1.15em;
  border: 0.15em solid currentColor;
  border-radius: 0.15em;
  transform: translateY(-0.075em);
  display: grid;
  place-content: center;
}

input[type="checkbox"]::before {
  content: "";
  width: 0.75em;
  height: 0.75em;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1em 1em var(--color-green-success);
}

input[type="checkbox"]:checked::before {
  transform: scale(1);
}

input[type="checkbox"]:focus {
  outline: max(2px, 0.15em) solid currentColor;
  outline-offset: max(2px, 0.15em);
}

input[type="checkbox"]:active {
  transform: scale(1.15);
}

/* https://moderncss.dev/pure-css-custom-checkbox-style/#custom-checkbox-style */

@media only screen and (max-width: 420px) {

  .options {
    margin-bottom: 0.65rem;
  }

  select {
    display: inline-block;
    width: 100%;
  }

  .searchString {
    max-width: 70%;
    display: inline-block;
  }

  .deleteButton {
    position: relative;
    top: auto;
    bottom: auto;
    left: 3%;
    width: 25%;
  }

  .url {
    width: 100%;
  }

  .jokeType {
    justify-content: center;
  }

  .joke {
    font-size: 1.2rem;
  }

  .about {
    margin-top: 1rem;
    padding: 0.5rem;
    font-weight: 400;
  }

  .about h1 {
    font-size: 2rem;
  }

  .about h2 {
    font-size: 1.3rem;
  }

  .about p {
    font-size: 1rem;
  }

  .about span {
    font-size: 0.8rem;
  }

  p span {
    font-weight: 1000;
  }

  /* Remove "hover" css selector and replace with "active" selector */

  label:hover {
    transform: scale(1);
    font-weight: normal;
  }

  label:active {
    transform: scale(1.08);
    font-weight: 725;
  }

  .resetButton:hover,
  .searchButton:hover,
  .deleteButton:hover {
    transform: scale(1);
  }

  .resetButton:active,
  .searchButton:active,
  .deleteButton:active {
    transform: scale(1.1);
  }

}

